--- a/Move.toml
+++ b/Move.toml
@@ -6,5 +6,4 @@ version = "0.0.0"
 AptosFramework = { git = "https://github.com/aptos-labs/aptos-core.git", subdir = "aptos-move/framework/aptos-framework/", rev = "devnet" }
 
 [addresses]
-
-
+IceBank = "0x42"
