--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.1",
     "ts-node": "^10.9.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
   "packageManager": "^pnpm@7.8.0"
