--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "scripts": {
-    "build": "rm -fr dist/ && tsc -P tsconfig.build.json && tsc -P tsconfig.esm.json",
-    "test": "pnpm run build && ava"
+    "build": "rm -fr dist/ && rm -fr .validator && tsc -P tsconfig.build.json && tsc -P tsconfig.esm.json",
+    "test": "pnpm run build && ava",
+    "lint": "eslint .  --ext .ts",
+    "lint:fix": "eslint --fix .  --ext .ts"
   },
   "eslintConfig": {
     "extends": "plugin:ava/recommended"
@@ -15,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.6.3",
+    "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "ava": "^4.3.1",
@@ -27,7 +30,11 @@
     "husky": "^8.0.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "wait-port": "^0.3.0"
   },
-  "packageManager": "^pnpm@7.8.0"
+  "packageManager": "^pnpm@7.8.0",
+  "dependencies": {
+    "aptos": "^1.2.2"
+  }
 }
