--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "wait-port": "^0.3.0"
+    "wait-port": "^0.3.0",
+    "yaml": "^2.1.1"
   },
   "packageManager": "^pnpm@7.8.0",
   "dependencies": {
